--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 	background:#F2F2F0;
 
 	font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight: lighter;
+	font-weight: 400;
 
 	color:#555;
 }
@@ -83,6 +83,7 @@ h1{
 	margin-top:40px;
 	padding-top:5px;
 
+	font-weight: 400;
 	color:#555;
 }
 
