--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 	font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 
-	color:#555;
+	color:#777;
 }
 
 
@@ -24,7 +24,7 @@ body{
   height:20px;
   position:fixed;
   top:0;
-  width:100%;
+  width:100%	;
 }
 
 .meta{
@@ -34,6 +34,7 @@ body{
 	font-size:18pt;
 	text-align:justify;
 
+	text-shadow: 2px 2px 1px #CCC;
 }
 
 .circle{
