--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
 	color:#777;
 }
 
-
 .hShadow{
 	background: -webkit-linear-gradient( rgba(70,70,70,0.5) , transparent); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient( rgba(70,70,70,0.5) , transparent); /* For Opera 11.1 to 12.0 */
@@ -52,6 +51,7 @@ body{
 
 	background: #FFF url('Photo.jpg') top center no-repeat;
 	background-size: auto 75%;
+
 }
 
 .circle:before{
@@ -162,4 +162,34 @@ h1{
 
 a, a:hover, a:visited{
 	color:#555;
+}
+
+.circle, .meta_wrap {
+	display: none;
+}
+
+.technologies {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+}
+.techno {
+	flex: 1;
+	margin: 10px;
+}
+
+.techno img {
+	width: auto;
+	height: 90px;
+}
+
+.techno p {
+	margin: 0;
+	white-space: nowrap;
 }
