--- a/style.css
+++ b/style.css
@@ -27,21 +27,26 @@ body{
   width:100%	;
 }
 
-.meta{
-	width:50%;
+.block {
+	width:60%;
 	margin:0 auto;
+}
+
+.meta{
 
 	font-size:18pt;
 	text-align:justify;
 
 	text-shadow: 2px 2px 1px #CCC;
+
+	margin-top: 0;
 }
 
 .circle{
 	margin:20px auto;
 	display:block;
-	width: 30%;
-	min-width:600px;
+	width: 20%;
+	min-width: 450px;
 
 	border-radius:100%;
 	font-size:20px;
@@ -57,7 +62,7 @@ body{
 .circle:before{
 	content: "";
 	display: block;
-	padding-top: calc(100% - 35%);
+	padding-top: calc(100% - 49%);
 }
 .part{
 	display:block;
@@ -144,6 +149,11 @@ h1{
 	font-weight: 400;
 	color:#333;
 }
+h2 {
+	font-weight: 400;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
 
 .shadow {
   -moz-box-shadow:    3px 3px 5px 6px #ccc;
@@ -153,10 +163,6 @@ h1{
 
 a, a:hover, a:visited{
 	color:#555;
-}
-
-.meta_wrap {
-	display: none;
 }
 
 .technologies {
@@ -183,4 +189,56 @@ a, a:hover, a:visited{
 .techno p {
 	margin: 0;
 	white-space: nowrap;
+	text-shadow: 2px 2px 1px #CCC;
+}
+
+.job {
+	text-align: left;
+	padding: 10px;
+}
+.job p {
+	margin: 0;
+}
+
+h3 {
+	margin: 3px 0;
+	font-size: 14px;
+	font-weight: 600;
+}
+h4 {
+	margin: 3px 0;
+	font-size: 12px;
+	font-weight: 300;
+}
+
+.work_wrap {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+
+	-webkit-align-items: left;
+	align-items: left;
+	-webkit-justify-content: center;
+	justify-content: center;
+}
+.work {
+	flex: 1;
+
+	display: -webkit-flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+
+	-webkit-flex-flow: row nowrap;
+	flex-flow: row nowrap;
+}
+
+.work img {
+	height: 70px;
+	width: auto;
+	margin: 10px;
+	border-radius: 4px;
 }
