--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 	font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 
-	color:#777;
+	color:#777777;
 }
 
 .main-title {
@@ -41,7 +41,7 @@ body{
 	font-size:18pt;
 	text-align:justify;
 
-	text-shadow: 2px 2px 1px #CCC;
+	text-shadow: 2px 2px 1px #CCCCCC;
 
 	margin-top: 0;
 }
@@ -58,7 +58,7 @@ body{
 
 	overflow: hidden;
 
-	background: #FFF no-repeat;
+	background: #FFFFFF no-repeat;
 	background-position: top center;
 	background-image: url('Photo.jpg');
 	background-size: auto 75%;
@@ -92,7 +92,7 @@ body{
 	width:50px;
 	height:50px;
 	display:inline-block;
-	/*background: #555;*/
+	/*background: #555555;*/
 	background: no-repeat;
 	background-size: 100%;
 }
@@ -153,7 +153,7 @@ h1{
 	padding-top:5px;
 
 	font-weight: 400;
-	color:#333;
+	color:#333333;
 }
 h2 {
 	font-weight: 400;
@@ -162,13 +162,13 @@ h2 {
 }
 
 .shadow {
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow:         3px 3px 5px 6px #ccc;
+  -moz-box-shadow:    3px 3px 5px 6px #cccccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #cccccc;
+  box-shadow:         3px 3px 5px 6px #cccccc;
 }
 
 a, a:hover, a:visited{
-	color:#555;
+	color:#555555;
 }
 
 .technologies {
@@ -195,7 +195,7 @@ a, a:hover, a:visited{
 .techno p {
 	margin: 0;
 	white-space: nowrap;
-	text-shadow: 2px 2px 1px #CCC;
+	text-shadow: 2px 2px 1px #CCCCCC;
 }
 
 .job {
@@ -250,7 +250,7 @@ h4 {
 }
 
 h3, h4 {
-	text-shadow: 2px 2px 1px #CCC;
+	text-shadow: 2px 2px 1px #CCCCCC;
 }
 
 .dot {
@@ -266,5 +266,5 @@ h3, h4 {
 .hr {
 	width: 20%;
 	margin: 12px auto;
-	border-top: solid 1px #CCC;
+	border-top: solid 1px #CCCCCC;
 }
