--- a/impress.css
+++ b/impress.css
@@ -1,10 +1,14 @@
 body {
-	transform: scale(0.8);
-	width: 119%;
-	margin-top: -90px;
+	transform: scale(0.77);
+	width: 121%;
+	margin-top: -100px;
 	background: #FFFFFF;
 	padding: 0;
-	margin-left: -75px;
+	margin-left: -90px;
+}
+
+.meta_wrap {
+	margin-top: 10px;
 }
 
 .hShadow, .header {
@@ -62,12 +66,12 @@ h3, h4, .techno p {
 }
 
 h2 {
-	margin-top: 20px;
-	margin-bottom: 7px;
-	font-size: 1.3em;
+	margin-top: 15px;
+	margin-bottom: 8px;
+	font-size: 1.2em;
 }
 
-.work img {
+.work, .project_wrap img {
 	margin: 8px;
 }
 
@@ -80,6 +84,23 @@ p {
 	margin-bottom: 0;
 }
 
-.techno p {
-	min-height: 25px;
+.project_wrap {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: row;
+	flex-direction: row;
+
+	-webkit-align-items: left;
+	align-items: left;
+	-webkit-justify-content: center;
+	justify-content: center;
+
+	position: absolute;
+	bottom: -110px;
+	padding: 0 13px;
+}
+.project {
+	align-items: left;
+	-webkit-justify-content: left;
+	justify-content: left;
 }
