--- a/impress.css
+++ b/impress.css
@@ -20,11 +20,12 @@ body {
 }
 
 .circle {
-	width: 13%;
+	width: 10%;
 	min-width: 50px;
 	border-radius: 100%;
 	margin: 0;
 	content:url('Photo.jpg');
+	height: 187px;
 }
 
 .circle::before {
@@ -55,6 +56,7 @@ body {
 .meta {
 	text-shadow: none;
 	font-size: 15pt;
+	display: none;
 }
 
 h3, h4, .techno p {
@@ -69,6 +71,12 @@ h2 {
 	margin-top: 15px;
 	margin-bottom: 8px;
 	font-size: 1.2em;
+}
+
+
+.main-title h2 {
+	margin-top: 1px;
+	margin-bottom: 2px;
 }
 
 .work, .project_wrap img {
