--- a/style.css
+++ b/style.css
@@ -44,13 +44,15 @@ body{
 	text-shadow: 2px 2px 1px #CCCCCC;
 
 	margin-top: 0;
+
+	display: none;
 }
 
 .circle{
 	margin:20px auto;
 	display:block;
 	width: 20%;
-	min-width: 450px;
+	min-width: 550px;
 
 	border-radius:100%;
 	font-size:20px;
@@ -68,12 +70,12 @@ body{
 .circle:before{
 	content: "";
 	display: block;
-	padding-top: calc(100% - 49%);
+	padding-top: calc(100% - 44%);
 }
 .part{
 	display:block;
 	width:100%;
-	padding-bottom:15%;
+	padding-bottom:12%;
 	background: #00CC99;
 }
 
@@ -159,6 +161,16 @@ h2 {
 	font-weight: 400;
 	margin-top: 30px;
 	margin-bottom: 10px;
+}
+
+.header h1{
+	margin-bottom: 0;
+}
+.header h2 {
+	font-weight: 300;
+	margin-top: -7px;
+	margin-bottom: 6px;
+	font-size: 1.4em;
 }
 
 .shadow {
