--- a/impress.css
+++ b/impress.css
@@ -1,14 +1,14 @@
 body {
 	transform: scale(0.77);
 	width: 121%;
-	margin-top: -100px;
+	margin-top: -110px;
 	background: #FFFFFF;
 	padding: 0;
 	margin-left: -90px;
 }
 
 .meta_wrap {
-	margin-top: 10px;
+	margin-top: -40px;
 }
 
 .hShadow, .header {
@@ -17,6 +17,11 @@ body {
 
 .shadow {
 	box-shadow: 1px 1px 6px 4px #cccccc;
+}
+
+.head.shadow {
+	display: block;
+    opacity: 0;
 }
 
 .circle {
@@ -104,11 +109,19 @@ p {
 	justify-content: center;
 
 	position: absolute;
-	bottom: -110px;
+	bottom: -200px;
 	padding: 0 13px;
 }
 .project {
-	align-items: left;
+	align-items: flex-start;
 	-webkit-justify-content: left;
 	justify-content: left;
+}
+
+#highlight_wrap {
+	display: none;
+}
+
+.project_wrap .project:nth-child(n+4) {
+   display: none;
 }
