--- a/impress.css
+++ b/impress.css
@@ -108,9 +108,9 @@ p {
 	-webkit-justify-content: center;
 	justify-content: center;
 
-	position: absolute;
-	bottom: -200px;
-	padding: 0 13px;
+	//position: absolute;
+	//bottom: -200px;
+	//padding: 0 13px;
 }
 .project {
 	align-items: flex-start;
